# MkPcAPP

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  BACKLOG.md  POWER_GUIDS.md  PROJECT_STATUS.md
docs/superpowers/plans/: 2026-07-13-inicio-lista-horizontal-plan.md  2026-07-18-grupos-lanzamiento.md
docs/superpowers/specs/: 2026-07-13-inicio-lista-horizontal-design.md  2026-07-18-grupos-lanzamiento-design.md
resources/: AppIcon.rc
scripts/: build.ps1
sensor-bridge/MkPCApp.SensorBridge/: LhmSensorReader.cs  MkPCApp.SensorBridge.csproj  Program.cs  SharedMemoryWriter.cs  SharedSensorData.cs
src/: main.cpp
src/app/: Application.cpp  Application.h  AutoStart.cpp  AutoStart.h  BridgeProcess.cpp  BridgeProcess.h  TrayIcon.cpp  TrayIcon.h
src/groups/: GroupJson.cpp  GroupJson.h  GroupLauncher.cpp  GroupLauncher.h  GroupManager.cpp  GroupManager.h  GroupProcessTracker.cpp  GroupProcessTracker.h  GroupStore.cpp  GroupStore.h  GroupTypes.h  ProcessLifecycle.cpp  ProcessLifecycle.h
src/ipc/: SharedMemoryChannel.h  SharedSensorData.h
src/platform/: ComScope.h  DX11Renderer.cpp  DX11Renderer.h  IconTextureCache.cpp  IconTextureCache.h  MiniJson.cpp  MiniJson.h  StringConvert.h  WndProc.cpp  WndProc.h
src/profiles/: AutomationEngine.cpp  AutomationEngine.h  ProfileJson.cpp  ProfileJson.h  ProfileManager.cpp  ProfileManager.h  ProfileStore.cpp  ProfileStore.h  ProfileTypes.h
src/profiles/SystemControl/: DisplayBrightness.cpp  DisplayBrightness.h  PowerPlan.cpp  PowerPlan.h  PowerTimeouts.cpp  PowerTimeouts.h  ScreenControl.cpp  ScreenControl.h  Volume.cpp  Volume.h
src/sensors/: NativeSensors.cpp  NativeSensors.h  SensorAggregator.h
src/startup/: AppInfoReader.cpp  AppInfoReader.h  IconExtractor.cpp  IconExtractor.h  RegistryStartupControl.cpp  RegistryStartupControl.h  ShortcutStartupControl.cpp  ShortcutStartupControl.h  SignatureVerifier.cpp  SignatureVerifier.h  StartupScanner.cpp  StartupScanner.h  StartupTypes.h
src/ui/: AddStartupEntryDialog.cpp  AddStartupEntryDialog.h  CardWidgets.cpp  CardWidgets.h  ConfirmDeleteDialog.cpp  ConfirmDeleteDialog.h  ConfirmDeleteGroupDialog.cpp  ConfirmDeleteGroupDialog.h  GroupEditorDialog.cpp  GroupEditorDialog.h  GroupsTab.cpp  GroupsTab.h  HardwareMonitorTab.cpp  HardwareMonitorTab.h  ITab.h  PerfilesTab.cpp  PerfilesTab.h  ProfileEditorDialog.cpp  ProfileEditorDialog.h  RingBuffer.h  RuleEditorDialog.cpp  RuleEditorDialog.h  StartupTab.cpp  StartupTab.h  TabManager.cpp  TabManager.h  Theme.cpp  Theme.h
